# gobred

./: Makefile.am  configure.ac
gobred/: Makefile.am  extension-gtk.c  extension-wpe.c  main-gtk.c  main-wpe.c
libgobred/: Makefile.am  gobred-bridge.c  gobred-bridge.h  gobred-event-private.h  gobred-event.c  gobred-event.h  gobred-js-utils.c  gobred-js-utils.h  gobred-log.c  gobred-log.h  gobred-method-private.h  gobred-method.c  gobred-method.h  gobred-module-private.h  gobred-module.c  gobred-module.h  gobred-private.h  gobred-value-private.h  gobred-value.c  gobred-value.h  gobred.h
modules/: Makefile.am  modules.mk
modules/fingerprint/: Makefile.am  enroll.c  fingerprint.c  fingerprint.h  poll.c  util.c  verify.c
modules/smartcard/: Makefile.am  smartcard.c
po/: POTFILES.in
